# voice_command_ros

./: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
include/: rviz_record_button.h
launch/: voice_command.launch
rviz/: voice_command.rviz
scripts/: voice_reg_xf.py
src/: rviz_record_button.cpp
