<?xml version="1.0"?>
<package>
  <name>voice_command</name>
  <version>0.1.1</version>
  <description>The voice command package for ROS.</description>
  <maintainer email="wtx_csu@163.com">wtx</maintainer>

  <license>TODO</license>
  
  <author email="wtx_csu@163.com">zhihao</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend> 
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  
  
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
